--- a/index.css
+++ b/index.css
@@ -87,5 +87,6 @@ nav {
 }
 @keyframes bounce {
     5%  { transform: scale(1.1, .8); }
-    10% { transform: scale(.8, 1.1) translateY(-5px); }        15% { transform: scale(1, 1); }
+    10% { transform: scale(.8, 1.1) translateY(-5px); }
+    15% { transform: scale(1, 1); }
 }
