--- a/myapp.css
+++ b/myapp.css
@@ -84,6 +84,7 @@ nav {
     margin-top: 40px;
     margin-bottom: 20px;
     border-radius: 10px;
+}
 #knowMore {
     color: white;
     font-style: italic;
